language-server/src/tests/snapshots/gleam_language_server__tests__completion__completions_for_a_function_return_annotation.snap
---
source: language-server/src/tests/completion.rs
expression: "\npub fn wibble(\n  _: String,\n) -> Nil {\n  Nil\n}\n"
---

pub fn wibble(
  _: String,
) -> Ni|l {
  Nil
}


----- Completion content -----
BitArray
  kind:   Class
  detail: Type
  sort:   5_BitArray
Bool
  kind:   Class
  detail: Type
  sort:   5_Bool
Float
  kind:   Class
  detail: Type
  sort:   5_Float
Int
  kind:   Class
  detail: Type
  sort:   5_Int
List
  kind:   Class
  detail: Type
  sort:   5_List
Nil
  kind:   Class
  detail: Type
  sort:   5_Nil
Result
  kind:   Class
  detail: Type
  sort:   5_Result
String
  kind:   Class
  detail: Type
  sort:   5_String
UtfCodepoint
  kind:   Class
  detail: Type
  sort:   5_UtfCodepoint
