language-server/src/tests/snapshots/gleam_language_server__tests__completion__completions_for_an_import.snap
---
source: language-server/src/tests/completion.rs
expression: "import dep\n\npub fn main() {\n  0\n}"
---
import dep|

pub fn main() {
  0
}


----- Completion content -----
gleam
  kind:   Module
  edits:
    [0:7-0:10]: "gleam"
