language-server/src/tests/snapshots/gleam_language_server__tests__completion__completions_for_an_import_from_dependency_with_docs.snap
---
source: language-server/src/tests/completion.rs
expression: "//// Main package\n//// documentation!\n\nimport gleam\n\npub fn main() {\n  0\n}"
---
//// Main package
//// documentation!

import gle|am

pub fn main() {
  0
}


----- Completion content -----
example_module
  kind:   Module
  edits:
    [3:7-3:12]: "example_module"
