language-server/src/tests/snapshots/gleam_language_server__tests__completion__completions_for_an_import_no_test.snap
---
source: language-server/src/tests/completion.rs
expression: "import gleam\n\npub fn main() {\n  0\n}"
---
import gle|am

pub fn main() {
  0
}


----- Completion content -----
