language-server/src/tests/snapshots/gleam_language_server__tests__completion__completions_for_an_import_preceeding_whitespace.snap
---
source: language-server/src/tests/completion.rs
expression: " import gleam\n\npub fn main() {\n  0\n}"
---
 i|mport gleam

pub fn main() {
  0
}


----- Completion content -----
dep
  kind:   Module
  edits:
    [0:7-0:13]: "dep"
