language-server/src/tests/snapshots/gleam_language_server__tests__completion__completions_for_an_import_while_in_dev.snap
---
source: language-server/src/tests/completion.rs
expression: "import gleam\n\npub fn main() {\n  0\n}"
---
import gleam|

pub fn main() {
  0
}


----- Completion content -----
app
  kind:   Module
  edits:
    [0:7-0:12]: "app"
dev_helper
  kind:   Module
  edits:
    [0:7-0:12]: "dev_helper"
