language-server/src/tests/snapshots/gleam_language_server__tests__completion__completions_for_an_import_while_in_test.snap
---
source: language-server/src/tests/completion.rs
expression: completions
---
[
    CompletionItem {
        label: "app",
        label_details: None,
        kind: Some(
            Module,
        ),
        tags: None,
        detail: None,
        documentation: None,
        deprecated: None,
        preselect: None,
        sort_text: None,
        filter_text: None,
        insert_text: None,
        insert_text_format: None,
        insert_text_mode: None,
        text_edit: Some(
            TextEdit(
                TextEdit {
                    range: Range {
                        start: Position {
                            line: 0,
                            character: 7,
                        },
                        end: Position {
                            line: 0,
                            character: 12,
                        },
                    },
                    new_text: "app",
                },
            ),
        ),
        text_edit_text: None,
        additional_text_edits: None,
        commit_characters: None,
        command: None,
        data: None,
    },
    CompletionItem {
        label: "test_helper",
        label_details: None,
        kind: Some(
            Module,
        ),
        tags: None,
        detail: None,
        documentation: None,
        deprecated: None,
        preselect: None,
        sort_text: None,
        filter_text: None,
        insert_text: None,
        insert_text_format: None,
        insert_text_mode: None,
        text_edit: Some(
            TextEdit(
                TextEdit {
                    range: Range {
                        start: Position {
                            line: 0,
                            character: 7,
                        },
                        end: Position {
                            line: 0,
                            character: 12,
                        },
                    },
                    new_text: "test_helper",
                },
            ),
        ),
        text_edit_text: None,
        additional_text_edits: None,
        commit_characters: None,
        command: None,
        data: None,
    },
]
